# dllm_RL

./: .gitignore  AGENT_GUIDE.md  EXPERIMENT_STATUS.md  pyproject.toml
.claude/agent-memory/ml-experiment-engineer/: MEMORY.md  project_stage2_diagnostic.md  project_standalone_grpo.md
configs/: base.yaml  baseline_diffu_grpo.yaml  smoke_toy.yaml  stage1_cw_grpo.yaml  stage2_value_credit.yaml  stage3_q_credit.yaml
experiments/: auto_restart_diffu_grpo.sh  dashboard.py  dashboard_main.py  eval_base.py  launch_9exps.sh  launch_ablation.sh  launch_fast.sh  launch_main_experiments.sh  launch_stage2_v4.sh  launch_v4_remaining.sh  monitor_9exps.py  monitor_plot.py  run_all_3000step.sh  run_base_eval.sh  run_diagnostic.py  run_diffu_grpo.sh  run_experiment.py  run_multi_dataset_tier3.py  run_stage2.sh  run_standalone_diffu_grpo.sh  run_standalone_stage1.sh  run_standalone_stage2.sh  run_standalone_stage2_v2.sh  run_tier2.py  run_tier3.py  run_tier3_official.py  run_training_pairs.sh  run_training_sequential.sh  smoke_test.py  train_experiment.py  train_standalone.py  train_standalone_v2.py  verify_pipeline.py
experiments/configs/: common.yaml
scripts/: eval_all.sh  run_smoke.sh  train_gsm8k_base.sh  train_gsm8k_diffu_grpo.sh  train_gsm8k_stage1.sh  train_gsm8k_stage2.sh
src/cc_rl/: __init__.py  evaluate.py  train.py
src/cc_rl/algorithms/: __init__.py  (+4 more)
tests/: conftest.py  test_answer_extractors.py  test_responsibility_weights.py  test_stage1_smoke.py  test_stage2_delta_v_smoke.py  test_stage2_smoke.py  test_stage3_smoke.py
tests/fixtures/: toy_2_plus_3.jsonl
(+27 files in other folders)
