[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cc_rl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "accelerate",
    "peft",
    "trl",
    "wandb",
    "numpy",
    "pytest",
    "omegaconf",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]
